# Armdax9OS

./: .gitignore  CMakePresets.json  README.md  path.txt
.devcontainer/: Dockerfile  devcontainer.json
ArmDax9OS/: CMakeLists.txt  CMakePresets.json
ArmDax9OS/arch/: CMakeLists.txt
ArmDax9OS/arch/arm/: head.S  linker.lds  main.c  tools.S
ArmDax9OS/arch/arm/boot/: init.S  linker.lds  mmu.c
ArmDax9OS/arch/arm/boot/raspi3/include/: const.h  init.h
ArmDax9OS/arch/arm/boot/raspi3/init/: init.S  init_c.c  mmu.c  tools.S
ArmDax9OS/arch/arm/boot/raspi3/peripherals/: uart.c  uart.h
ArmDax9OS/arch/arm/include/: const.h  mmu.h
ArmDax9OS/arch/arm/irq/: ipi.c  irq.S  irq_entry.S  irq_entry.c  irq_entry.h
ArmDax9OS/arch/arm/machine/: pmu.c  smp.c
ArmDax9OS/arch/arm/mm/: cache.c  memcpy.S  memmove.S  memset.S  page_table.S  page_table.c
ArmDax9OS/arch/arm/plat/raspi3/mm/: mmparse.c
ArmDax9OS/arch/arm/plat/raspi3/uart/: peripherals.h  uart.c
ArmDax9OS/arch/arm/sched/: sched.c
ArmDax9OS/arch/arm/sync/: lock.S  lock.c  lock_impl_plan.md  ticket.h
ArmDax9OS/docs/: mm.md  mmu_memory_mapping.md
ArmDax9OS/include/arch/arm/: ipi.h  mmu.h  sync.h  tools.h
ArmDax9OS/include/arch/arm/arch/machine/: smp.h
ArmDax9OS/include/arch/arm/arch/mm/: page_table.h
ArmDax9OS/include/arch/arm/machine/: esr.h  pmu.h  registers.h  smp.h
ArmDax9OS/include/arch/arm/mm/: page_table.h
ArmDax9OS/include/arch/arm/plat/raspi3/: irq_num.h  machine.h
ArmDax9OS/include/arch/arm/sched/: arch_sched.h
ArmDax9OS/include/common/: asm.h  bitmap.h  cpuinfo.h  debug.h  error.h  kprintf.h  list.h  lock.h  macro.h  radix.h  rbtree.h  types.h  vars.h
ArmDax9OS/include/ds/: radix.h
ArmDax9OS/include/irq/: ipi.h  irq.h
ArmDax9OS/include/lib/: elf.h  printf.h  radix.c  uart.h
ArmDax9OS/include/mm/: buddy.h  kmalloc.h  memory.h  mm.h  slab.h  vmspace.h
ArmDax9OS/include/object/: cap_group.h  object.h
ArmDax9OS/include/sched/: context.h  sched.h
ArmDax9OS/include/syscall/: syscall_num.h
ArmDax9OS/keneral/: CMakeLists.txt  ReadMe.md  per_cpu.c
ArmDax9OS/keneral/irq/: ipi.c
ArmDax9OS/keneral/lib/: elf.c  radix.c  rbtree.c
ArmDax9OS/keneral/mm/: buddy.c  mm.c  slab.c
ArmDax9OS/keneral/object/: cap_group.c  object.c
ArmDax9OS/keneral/syscall/: syscall.c
Scripts/: gcc.bash  setup-toolchain.sh
docs/: ds.md  elf.md  gcc交叉编译配置.md
documentation/: cmake文档概述.md
documentation/cmake/: command.md  env&variables.md  properties.md
